# shakesapp-python

./: .gitignore  skaffold.yaml
manifests/: client.yaml  loadgen.yaml  server.yaml
src/client/: Dockerfile  client.py  pyproject.toml
src/loadgen/: Dockerfile  loadgen.py  loadgen.sh  locustfile.py  pyproject.toml
src/server/: Dockerfile  pyproject.toml  server.py
